# tcp_labs

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  fill_database.py  init_db.py  orm.py  orm_models.py  package-lock.json  pyproject.toml  requirements.txt  uv.md  техсп_отчет_Фаюстова_Должиков.docx
crud/: __init__.py
db_services/: __init__.py  card_link_service.py  card_service.py  roadmap_service.py  user_card_service.py  user_roadmap_service.py  user_service.py
fill_database/: __init__.py  fill_card_links.py  fill_cards.py  fill_roadmap_cards.py  fill_roadmaps.py  fill_user_cards.py  fill_user_roadmaps.py  fill_users.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.jsx  index.css  main.jsx
frontend/src/api/: api.jsx
frontend/src/components/: CardRedact.jsx  CardView.css  CardView.jsx  Header.css  Header.jsx  RoadmapRedact.jsx  RoadmapView.css  RoadmapView.jsx
frontend/src/pages/: AuthPage.jsx  AuthRegister.css  CardsPage.css  CardsPage.jsx  EditProfilePage.css  EditProfilePage.jsx  MainPage.jsx  MyRoadmapsPage.jsx  RegisterPage.jsx  RoadmapSearchPage.css  RoadmapSearchPage.jsx
migrations/: env.py
migrations/versions/: 993d7c3d7b8f_initial_migration.py
minio_img_service/: Dockerfile  build.gradle.kts
minio_img_service/src/main/java/com/riveo/minio/: MinioApplication.java
minio_img_service/src/main/java/com/riveo/minio/api/controller/: FileController.java  TestController.java
minio_img_service/src/main/java/com/riveo/minio/config/: MinioConfig.java  OpenApiConfig.java  WebConfig.java
minio_img_service/src/main/java/com/riveo/minio/errorHandler/: AccessDeniedException.java  FileNotFoundException.java  GlobalExceptionHandler.java  InvalidBucketException.java  UnauthorizedException.java
minio_img_service/src/main/java/com/riveo/minio/service/: JwtUtil.java  MinioService.java
minio_img_service/src/main/resources/: application.properties
minio_img_service/src/test/java/com/riveo/minio/: MinioApplicationTests.java
minio_img_service/src/test/resources/: application-test.properties
src/: config.py  database.py  dto.py  fill_database.py  fill_tables.py  main.py  models.py
src/api/: dependencies.py  main.py  security.py
src/api/dependencies/: dependencies.py  pagination_dependency.py
src/api/routes/: auth.py  card_links.py  cards.py  roadmaps.py  user_cards.py  user_roadmaps.py  users.py
src/crud/: __init__.py  card.py  card_link.py  roadmap.py  user.py  user_card.py  user_roadmap.py
src/migrations/: alembic_tutorial.md  env.py
src/migrations/versions/: 0b0476ca9dfb_.py  6b5936e002fe_.py  aa3097eeb005_.py
src/queries/: orm.py
src/repositories/: card_links.py  cards.py  roadmaps.py  tokens.py  user_cards.py  user_roadmaps.py  users.py
src/services/: card_links.py  cards.py  roadmaps.py  tokens.py  user_cards.py  user_roadmaps.py  users.py
src/utils/: repository.py  unitofwork.py  utils.py
