[project]
name = "tcp-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "bcrypt<4.0",
    "black==25.1.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "ecdsa==0.19.1",
    "faker==37.1.0",
    "fastapi==0.115.12",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.3.7",
    "psycopg==3.2.6",
    "psycopg-binary==3.2.6",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.1.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "rsa==4.9.1",
    "ruff>=0.11.10",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.1",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uvicorn==0.34.0",
]

[tool.ruff]
line-length = 90
show-fixes = true
exclude = ["migrations"]
src = ["src"]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true